# SparseConvNet

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README_Torch.md  build.sh  develop.sh  setup.py
PyTorch/: setup.py
PyTorch/sparseconvnet/: __init__.py  activations.py  averagePooling.py  batchNormalization.py  classificationTrainValidate.py  convolution.py  deconvolution.py  denseToSparse.py  dropout.py  identity.py  inputBatch.py  inputLayer.py  metadata.py  (+9 more)
Torch/: AffineReluTrivialConvolution.lua  AveragePooling.lua  BatchNormalization.lua  BatchNormalizationInTensor.lua  BatchwiseDropout.lua  C.lua  CAddTable.lua  CMakeLists.txt  ClassificationTrainValidate.lua  ConcatTable.lua  Convolution.lua  DataLoader.lua  Deconvolution.lua  DenseNetBlock.lua  Identity.lua  InputBatch.lua  JoinTable.lua  LeakyReLU.lua  MaxPooling.lua  Metadata.lua  NetworkArchitectures.lua  NetworkInNetwork.lua  ReLU.lua  Sequential.lua  SparseToDense.lua  SubmanifoldConvolution.lua  ValidConvolution.lua  init.lua  sparseconvnet-0.1-0.rockspec  sparseconvnet-0.1-1.rockspec
Torch/SCN/: drawCurve.cpp  init.cpp  init.cu
Torch/SCN/cmake/: FindCudaArch.cmake
examples/: fusion.py  hello-world.lua  hello-world.py
sparseconvnet/: __init__.py  activations.py  averagePooling.py  batchNormalization.py  classificationTrainValidate.py  convolution.py  deconvolution.py  denseToSparse.py  dropout.py  fullConvolution.py  globalFusion.py  identity.py  inputBatch.py  ioLayers.py  maxPooling.py  metadata.py  networkArchitectures.py  networkInNetwork.py  permutohedralSubmanifoldConvolution.py  randomizedStrideConvolution.py  randomizedStrideMaxPooling.py  sequential.py  shapeContext.py  sparseConvNetTensor.py  sparseToDense.py  sparsify.py  spectral_norm.py  submanifoldConvolution.py  tables.py  unPooling.py  utils.py
(+284 files in other folders)
